perbaikan mayor pada logika aplikasi
